cabal-version:      3.0
name:               tidepool-control-server
version:            0.1.0.0
synopsis:           Unix socket control server for Claude Code++ integration. Receives hook events from mantle-agent and direct HTTP MCP requests from Claude Code via Unix socket. Provides 7 MCP tools organized in tiers: LSP-only (Tier 1), LLM-enhanced (Tier 2), external orchestration (Tier 3), TUI-interactive (Tier 4), and mailbox communication (Tier 5).
description:        Receives hook events and MCP tool calls from mantle-agent
                    via NDJSON over Unix socket. Routes to effect handlers.
                    Includes semantic-scout for code exploration via LSP.
license:            MIT
author:             Inanna
build-type:         Simple

data-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

extra-source-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

common warnings
    ghc-options: -Wall -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        -- Control server
        Tidepool.Control.API
        Tidepool.Control.Protocol
        Tidepool.Control.Types
        Tidepool.Control.Server
        Tidepool.Control.Handler
        Tidepool.Control.Logging
        Tidepool.Control.TUIState
        Tidepool.Control.TUIInterpreter
        Tidepool.Control.Runtime.Paths
        Tidepool.Control.Runtime.ProcessCompose
        Tidepool.Control.Hook.Policy
        Tidepool.Control.Hook.CircuitBreaker
        Tidepool.Control.Handler.Hook
        Tidepool.Control.Handler.MCP
        Tidepool.Control.Observability
        Tidepool.Control.Interpreters.Traced
        -- Hook implementations
        Tidepool.Control.Hook.SessionStart
        Tidepool.Control.Hook.SessionStart.Context
        Tidepool.Control.Hook.Stop
        Tidepool.Control.Hook.Stop.Context
        Tidepool.Control.LSPTools
        Tidepool.Control.PMTools
        Tidepool.Control.PMReviewDAG
        Tidepool.Control.PMStatus
        Tidepool.Control.PMPropose
        Tidepool.Control.MailboxTools
        Tidepool.Control.ExoTools
        Tidepool.Control.ExoTools.Internal
        Tidepool.Control.ExoTools.Status
        Tidepool.Control.ExoTools.SpawnAgents
        Tidepool.Control.ExoTools.FilePR
        Tidepool.Control.ExoTools.FilePR.Context
        Tidepool.Control.ExoTools.PrReviewStatus
        Tidepool.Control.TUITools
        Tidepool.Control.FeedbackTools
        Tidepool.Control.RoleConfig
        Tidepool.Control.Export
        -- StopHook (workflow stages)
        Tidepool.Control.StopHook.Types
        Tidepool.Control.StopHook.Graph
        Tidepool.Control.StopHook.Handlers
        Tidepool.Control.StopHook.ErrorParser
        Tidepool.Control.StopHook.Templates
        -- Effects
        Tidepool.Control.Effects.SshExec
        Tidepool.Control.Effects.Cabal
        Tidepool.Control.Effects.Git
        Tidepool.Control.Effects.Justfile
        -- Scout (semantic code exploration)
        Tidepool.Control.Scout.Types
        Tidepool.Control.Scout.EdgeTypes
        Tidepool.Control.Scout.Heuristics
        Tidepool.Control.Scout.LSP
        Tidepool.Control.Scout.Templates
        -- DocGen (teaching document generation)
        Tidepool.Control.Scout.DocGen
        Tidepool.Control.Scout.DocGen.Types
        Tidepool.Control.Scout.DocGen.Gemma
        Tidepool.Control.Scout.DocGen.Teacher
        Tidepool.Control.Scout.Tools
        -- Graph-based DocGen (tidepool DSL)
        Tidepool.Control.Scout.Graph
        Tidepool.Control.Scout.Graph.Types
        Tidepool.Control.Scout.Graph.Templates
        Tidepool.Control.Scout.Graph.Templates.Context
        Tidepool.Control.Scout.Graph.Handlers
        Tidepool.Control.Scout.Graph.Runner
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        base64-bytestring >= 1.2,
        async,
        directory,
        filepath,
        process,
        network >= 3.1 && < 4,
        stm >= 2.5 && < 3,
        fast-logger >= 3.0 && < 4,
        time >= 1.9 && < 2,
        -- Servant / HTTP
        servant,
        servant-server,
        servant-websockets,
        websockets,
        warp,
        wai,
        wai-extra,
        uuid,
        -- Scout dependencies
        containers >= 0.6 && < 1,
        freer-simple,
        tidepool-core,
        tidepool-training-generator,
        tidepool-teaching,
        tidepool-bd-interpreter,
        tidepool-cabal-interpreter,
        tidepool-github-interpreter,
        tidepool-env-interpreter,
        tidepool-justfile-interpreter,
        tidepool-worktree-interpreter,
        tidepool-filesystem-interpreter,
        tidepool-zellij-interpreter,
        tidepool-gemini-interpreter,
        tidepool-observability-interpreter,
        -- HTTP for FunctionGemma
        http-conduit,
        http-client,
        regex-tdfa,
        vector,
        -- Code sampling
        random,
        -- OpenTelemetry
        hs-opentelemetry-api >= 0.1,
        hs-opentelemetry-sdk >= 0.1,
        hs-opentelemetry-exporter-otlp >= 0.1,
        -- Template rendering (for Graph/Templates.hs)
        mtl,
        ginger,
        parsec,
        yaml
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        DataKinds
        TypeFamilies
        TypeOperators

executable tidepool-control-server
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        directory,
        text >= 2.0 && < 3,
        tidepool-training-generator,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite stop-hook-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          StopHookSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite mailbox-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          MailboxToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite code-extraction-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CodeExtractionSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        tidepool-teaching,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite exo-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ExoToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-env-interpreter,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        containers,
        time,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-propose-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMProposeSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite pm-review-dag-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMReviewDAGSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        time,
        containers,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-status-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMStatusSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        time,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite parser-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ParserSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite hook-policy-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          HookPolicySpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite feedback-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          FeedbackToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        freer-simple,
        directory,
        filepath,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite ssh-exec-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          SshExecSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite circuit-breaker-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CircuitBreakerSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        time >= 1.9 && < 2,
        containers,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite role-config-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          RoleConfigSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        containers,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite session-start-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          SessionStartSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        tidepool-bd-interpreter,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications