cabal-version:      3.4
name:               exomonad
version:            0.1.0.0
synopsis:           ExoMonad Framework Library
license:            MIT
author:             ExoMonad Team
maintainer:         maintainers@exomonad.io
build-type:         Simple

common shared
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        GADTs
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
    build-depends:
        base >= 4.16 && < 5,
        bytestring,
        text,
        aeson,
        polysemy >= 1.9,
        unordered-containers,
        time,
        directory,
        filepath,
        extism-pdk ^>= 1.2.0.0

    -- Polysemy plugin doesn't work with WASM cross-compilation
    if !arch(wasm32)
        build-depends: polysemy-plugin >= 0.4
        ghc-options: -fplugin=Polysemy.Plugin

library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:
        ExoMonad
        ExoMonad.Types
        ExoMonad.Tools
        ExoMonad.Tools.Agents
        ExoMonad.Tools.FileSystem
        ExoMonad.Tools.Git
        ExoMonad.Tools.GitHub
        ExoMonad.Tool.Class
        ExoMonad.Tool.Mode
        ExoMonad.Tool.Record
        ExoMonad.Tool.Runtime
        ExoMonad.Hooks
        ExoMonad.Effects
        ExoMonad.Effects.AgentControl
        ExoMonad.Effects.FileSystem
        ExoMonad.Effects.StopHook
        ExoMonad.FFI
        ExoMonad.HostCall
        ExoMonad.MCP
        ExoMonad.TUI
