cabal-version:      3.0
name:               tidepool-native-server
version:            0.1.0.0
synopsis:           Native tidepool server - Servant + WebSocket + all interpreters
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        Tidepool.Server
        Tidepool.Server.API
        Tidepool.Server.EffectRunner
        Tidepool.Server.Session
        Tidepool.Server.SimpleAgent
    build-depends:
        base >= 4.17 && < 5,
        freer-simple >= 1.2 && < 2,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        warp >= 3.3 && < 4,
        wai >= 3.2 && < 4,
        wai-websockets >= 3.0 && < 4,
        websockets >= 0.12 && < 1,
        http-types >= 0.12 && < 1,
        servant >= 0.19 && < 1,
        servant-server >= 0.19 && < 1,
        tagged >= 0.8 && < 1,
        wai-app-static >= 3.1 && < 4,
        bytestring >= 0.11 && < 1,
        filepath >= 1.4 && < 2,
        directory >= 1.3 && < 2,
        containers >= 0.6 && < 1,
        stm >= 2.5 && < 3,
        time >= 1.12 && < 2,
        uuid >= 1.3 && < 2,
        tidepool-core,
        tidepool-wire-types,
        tidepool-ui-interpreter,
        tidepool-habitica-interpreter,
        tidepool-observability-interpreter,
        tidepool-llm-interpreter,
        tidepool-log-interpreter,
        tidepool-teaching,
        fast-logger >= 3.0 && < 4
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GADTs
        LambdaCase
        OverloadedStrings
        TypeOperators
        OverloadedRecordDot
        TypeFamilies

executable tidepool-native
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-native-server
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
