cabal-version:      3.0
name:               tidepool-platform
version:            0.1.0.0
synopsis:           Platform-specific implementations for tidepool (HTTP, SQLite, GUI)
description:        Native-only components that require networking, storage, or GUI.
                    Not compatible with WASM compilation.
license:            MIT
author:             Inanna
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-missing-export-lists -Wincomplete-patterns -Wredundant-constraints -Wunused-packages -haddock

library
    import:           warnings
    exposed-modules:
        Tidepool.Anthropic.Http
        Tidepool.Anthropic.Client
        Tidepool.Storage
        Tidepool.Effect.Runners
        -- CLI with LLM effects
        Tidepool.Graph.CLI.Runner
        Tidepool.Graph.CLI.Example.Types
        Tidepool.Graph.CLI.Example.Graph
    build-depends:
        base >= 4.17 && < 5,
        tidepool-core,
        aeson >= 2.1 && < 3,
        aeson-pretty >= 0.8 && < 1,
        text >= 2.0 && < 3,
        bytestring >= 0.11 && < 1,
        containers >= 0.6 && < 1,
        -- HTTP dependencies (WASM-incompatible)
        req >= 3.13 && < 4,
        http-client >= 0.7 && < 1,
        modern-uri >= 0.3 && < 1,
        -- SQLite dependencies (WASM-incompatible)
        sqlite-simple >= 0.4.19 && < 0.5,
        direct-sqlite >= 2.3 && < 3,
        -- Other
        uuid >= 1.3 && < 2,
        time >= 1.12 && < 2,
        vector >= 0.13 && < 1,
        directory >= 1.3 && < 2,
        -- Effect system
        freer-simple >= 1.2 && < 2,
        -- CLI dependencies
        optparse-applicative >= 0.18 && < 1
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators

test-suite platform-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        base >= 4.17 && < 5,
        tidepool-platform,
        tidepool-core,
        hspec >= 2.10 && < 3,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        freer-simple,
        bytestring,
        time,
        directory
    default-language: GHC2024
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        GADTs
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators

executable summarizer-cli
    import:           warnings
    main-is:          SummarizerCLI.hs
    hs-source-dirs:   app
    build-depends:
        base >= 4.17 && < 5,
        tidepool-platform,
        tidepool-core,
        text >= 2.0 && < 3
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
