cabal-version: 3.4
name: proto-test
version: 0.1.0.0
synopsis: Wire format compatibility tests for proto3-suite
description:
  Tests to verify proto3-suite JSON output matches prost+serde output.
build-type: Simple
license: BSD-3-Clause
license-file: ../../LICENSE

executable proto-test
  default-language: GHC2021
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >= 4.16 && < 5,
    proto3-suite >= 0.9.4,
    proto3-wire,
    bytestring,
    text >= 2.0,
    aeson >= 2.0,
    aeson-pretty
