cabal-version: 3.4
name: proto-test
version: 0.1.0.0
synopsis: Cross-language wire format tests (proto3-suite ↔ prost)
description:
  Verifies that proto3-suite (Haskell) and prost (Rust) produce
  compatible protobuf binary encodings for the effect system types.
  Uses known-good hex bytes from Rust test suite as reference.
build-type: Simple
license: BSD-3-Clause
license-file: ../../LICENSE

executable proto-test
  default-language: GHC2021
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >= 4.16 && < 5,
    exomonad-proto,
    proto3-runtime,
    proto3-wire,
    bytestring,
    vector
