cabal-version:      3.0
name:               exomonad-wasm-guest
version:            0.1.0.0
synopsis:           WASM Guest types for ExoMonad
license:            MIT
author:             Inanna
maintainer:         inanna@tidepool.co
build-type:         Simple

library
    exposed-modules:
        ExoMonad.Generated.Effects
    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:
        base >= 4.17 && < 5,
        aeson >= 2.1 && < 3,
        text >= 2.0 && < 3,
        vector >= 0.13 && < 1,
        unordered-containers >= 0.2 && < 1,
        bytestring >= 0.11 && < 1
