cabal-version:      3.4
name:               wasm-guest
version:            0.1.0.0
synopsis:           Haskell WASM Guest for ExoMonad
license:            MIT
author:             ExoMonad Team
maintainer:         maintainers@exomonad.io
build-type:         Simple

common shared
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        GADTs
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
    build-depends:
        base >= 4.16 && < 5,
        bytestring,
        text,
        aeson,
        polysemy >= 1.9,
        unordered-containers,
        containers,
        time,
        directory,
        filepath

    -- Polysemy plugin doesn't work with WASM cross-compilation (GHC #14335)
    if !arch(wasm32)
        build-depends: polysemy-plugin >= 0.4

-- Internal library with shared tool infrastructure
library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:
        -- Top-level API
        ExoMonad
        -- Tool infrastructure
        ExoMonad.Guest.Tool.Class
        ExoMonad.Guest.Tool.Mode
        ExoMonad.Guest.Tool.Record
        ExoMonad.Guest.Tool.Runtime
        -- Tools
        ExoMonad.Guest.Tools.Ping
        ExoMonad.Guest.Tools.Agent
        ExoMonad.Guest.Tools.FilePR
        ExoMonad.Guest.Tools.Popup
        -- Tool records
        ExoMonad.Guest.Records.Ping
        ExoMonad.Guest.Records.Agent
        ExoMonad.Guest.Records.FilePR
        ExoMonad.Guest.Records.Popup
        -- Effects (for internal composition)
        ExoMonad.Guest.Effects.AgentControl
        ExoMonad.Guest.Effects.FileSystem
        ExoMonad.Guest.Effects.StopHook
        ExoMonad.Guest.Effects.UI
        ExoMonad.Guest.HostCall
        ExoMonad.Guest.FFI
        -- Types
        ExoMonad.Guest.Types
        ExoMonad.Types
        ExoMonad.Guest.TUI
        ExoMonad.Guest.Parsers
        -- New Tools
        ExoMonad.Guest.Tools.Git
        ExoMonad.Guest.Tools.GitHub
        ExoMonad.Guest.Tools.File
        ExoMonad.Guest.Records.Git
        ExoMonad.Guest.Records.GitHub
        ExoMonad.Guest.Records.File
    build-depends:
        extism-pdk ^>= 1.2.0.0

    -- Polysemy plugin doesn't work with WASM cross-compilation
    if !arch(wasm32)
        ghc-options: -fplugin=Polysemy.Plugin

test-suite ffi-serialization-tests
  type: exitcode-stdio-1.0
  main-is: FFISerializationSpec.hs
  hs-source-dirs: test
  c-sources: test/cbits/stubs.c
  build-depends:
      base
    , wasm-guest
    , QuickCheck
    , aeson
    , hspec
    , text
    , bytestring
  default-language: GHC2021
  default-extensions:
      OverloadedStrings
      ScopedTypeVariables
      DeriveGeneric
      DeriveAnyClass
