cabal-version:      3.4
name:               wasm-guest
version:            0.1.0.0
synopsis:           Haskell WASM Guest for ExoMonad
license:            MIT
author:             ExoMonad Team
maintainer:         maintainers@exomonad.io
build-type:         Simple

common shared
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        GADTs
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        ImportQualifiedPost
        ExplicitNamespaces
    build-depends:
        base >= 4.16 && < 5,
        bytestring,
        text,
        aeson,
        polysemy >= 1.9,
        unordered-containers,
        containers,
        time,
        directory,
        filepath

    -- Polysemy plugin doesn't work with WASM cross-compilation (GHC #14335)
    if !arch(wasm32)
        build-depends: polysemy-plugin >= 0.4

-- Internal library with shared tool infrastructure
-- Only buildable on WASM target (uses extism-pdk which requires WASM runtime)
library wasm-guest-internal
    import:           shared
    visibility:       public
    if !os(wasi)
        buildable: False
    hs-source-dirs:   src
    exposed-modules:
        -- Top-level API
        ExoMonad
        -- Tool infrastructure
        ExoMonad.Guest.Tool.Class
        ExoMonad.Guest.Tool.Mode
        ExoMonad.Guest.Tool.Record
        ExoMonad.Guest.Tool.Runtime
        -- Tools
        ExoMonad.Guest.Tools.Ping
        ExoMonad.Guest.Tools.Agent
        ExoMonad.Guest.Tools.FilePR
        ExoMonad.Guest.Tools.Popup
        ExoMonad.Guest.Tools.Messaging
        ExoMonad.Guest.Tools.Coordination
        -- SpawnSpec compiler
        ExoMonad.Guest.SpawnSpec.Types
        ExoMonad.Guest.SpawnSpec.Zones
        ExoMonad.Guest.SpawnSpec.Compile
        -- Tool records
        ExoMonad.Guest.Records.Ping
        ExoMonad.Guest.Records.Agent
        ExoMonad.Guest.Records.FilePR
        ExoMonad.Guest.Records.Popup
        ExoMonad.Guest.Records.Messaging
        ExoMonad.Guest.Records.TLMessaging
        ExoMonad.Guest.Records.Coordination
        -- Effects (for internal composition)
        ExoMonad.Guest.Effects.AgentControl
        ExoMonad.Guest.Effects.Coordination
        ExoMonad.Guest.Effects.FileSystem
        ExoMonad.Guest.Effects.StopHook
        -- Extensible effects (for external consumers)
        ExoMonad.Guest.Effect
        -- Effect typeclass and namespace-based effects
        ExoMonad.Effect.Class
        ExoMonad.Effects.Git
        ExoMonad.Effects.GitHub
        ExoMonad.Effects.Log
        ExoMonad.Effects.Agent
        ExoMonad.Effects.Fs
        ExoMonad.Effects.Popup
        ExoMonad.Effects.FilePR
        ExoMonad.Effects.Copilot
        ExoMonad.Effects.Messaging
        ExoMonad.Effects.KV
        -- Types
        ExoMonad.Guest.Types
        ExoMonad.Types
        -- Permissions
        ExoMonad.Permissions
    -- Additional dependencies (shared stanza provides common deps)
    build-depends:
        exomonad-pdk,
        exomonad-proto,
        proto3-runtime,
        vector

    -- Polysemy plugin doesn't work with WASM cross-compilation
    if !arch(wasm32)
        ghc-options: -fplugin=Polysemy.Plugin

