[package]
name = "agent-status"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tuirealm = "3.3"
tuirealm_derive = "2.0"
tui-realm-stdlib = "3.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
