[package]
name = "claude-teams-bridge"
version = "0.1.0"
edition = "2021"
description = "Read/write messages through Claude Code's Teams filesystem"
license = "BSD-3-Clause"
repository = "https://github.com/tidepool-heavy-industries/claude-teams-bridge"
keywords = ["claude", "teams", "mcp", "agent"]
categories = ["development-tools"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "fs"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
